--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -9,6 +9,9 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    permissions:
+      issues: write
+
     steps:
       - name: Add comment
         uses: peter-evans/create-or-update-comment@v2
