Update the command run build assets

--- a/.github/workflows/compile-assets.yml
+++ b/.github/workflows/compile-assets.yml
@@ -7,7 +7,7 @@ on:
         default: "16"
         type: string
       cmd:
-        default: "production"
+        default: "build"
         type: string
 
 jobs:
