Give GITHUB_TOKEN write permission
GitHub changed the default permission of the GITHUB_TOKEN in February for all newly created repositories.[^1]

You now have to explicitly give the GITHUB_TOKEN write permissions for `contents`. Otherwise the "stefanzweifel/git-auto-commit-action"-step will fail.

[1]: https://github.blog/changelog/2023-02-02-github-actions-updating-the-default-github_token-permissions-to-read-only/

--- a/.github/workflows/compile-assets.yml
+++ b/.github/workflows/compile-assets.yml
@@ -14,6 +14,12 @@ jobs:
   compile:
     runs-on: ubuntu-latest
 
+    permissions:
+      # Give the default GITHUB_TOKEN write permission to commit and push the
+      # compiled assets back to the repository.
+      # https://github.blog/changelog/2023-02-02-github-actions-updating-the-default-github_token-permissions-to-read-only/
+      contents: write
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
