--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -19,6 +19,7 @@ jobs:
           ref: ${{ github.event.release.target_commitish }}
 
       - name: Check if branch and release match
+        if: ${{ github.event.release.target_commitish != 'main' && github.event.release.target_commitish != 'master' }}
         id: guard
         run: |
           NUMERIC_VERSION="${RELEASE_TAG_NAME#v}"
@@ -31,7 +32,6 @@ jobs:
           if [ "$MAJOR_VERSION" != "$BRANCH_MAJOR_VERSION" ]; then
             echo "Mismatched versions! Aborting."
             VERSION_MISMATCH='true';
-            # exit 1
           else
             echo "Versions match! Proceeding."
             VERSION_MISMATCH='false';
