Abort update-changelog workflow if target branch does not match major release version (#13)
* Add guard to update-changelog Workflow

These new steps validate if the given release version (eg. `v10.1.2`) matches with the selected target branch (eg. `10.x`).

The script extracts the major version from both strings by using parameter expansion in Bash.
The `v` is being removed from the given release version (resulting in `10.1.2`). Next the major version is extracted by ignoring all values after the first dot (resulting in `10`).

The major version is also extracted from the selected branch name by ignoring all values after the first dot (resulting in `10`).

If the two major version do not match the second step is being executed, a `VERSION_MISMATCH` output variable is set to true.

If that's the case the next step is executed.
By using the `actions/github-script`-Action we mark the Workflow run as failed.[1].
The GitHub user triggering the workflow should receive a notification by mail and see the error message on the summary screen of the Workflow run.

[1]: https://github.com/actions/toolkit/tree/main/packages/core#exit-codes

* Don't run guard when main/master is targeted

--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -18,6 +18,36 @@ jobs:
           # is not out of date.
           ref: ${{ github.event.release.target_commitish }}
 
+      - name: Check if branch and release match
+        if: ${{ github.event.release.target_commitish != 'main' && github.event.release.target_commitish != 'master' }}
+        id: guard
+        run: |
+          NUMERIC_VERSION="${RELEASE_TAG_NAME#v}"
+          MAJOR_VERSION="${NUMERIC_VERSION%%.*}"
+          BRANCH_MAJOR_VERSION="${BRANCH%%.*}"
+
+          echo "MAJOR_VERSION=$(echo $MAJOR_VERSION)" >> $GITHUB_OUTPUT;
+          echo "BRANCH_MAJOR_VERSION=$(echo $BRANCH_MAJOR_VERSION)" >> $GITHUB_OUTPUT;
+
+          if [ "$MAJOR_VERSION" != "$BRANCH_MAJOR_VERSION" ]; then
+            echo "Mismatched versions! Aborting."
+            VERSION_MISMATCH='true';
+          else
+            echo "Versions match! Proceeding."
+            VERSION_MISMATCH='false';
+          fi
+          echo "VERSION_MISMATCH=$(echo $VERSION_MISMATCH)" >> $GITHUB_OUTPUT;
+        env:
+          BRANCH: ${{ github.event.release.target_commitish }}
+          RELEASE_TAG_NAME: ${{ github.event.release.tag_name }}
+
+      - name: Fail if branch and release tag do not match
+        if: ${{ steps.guard.outputs.VERSION_MISMATCH == 'true' }}
+        uses: actions/github-script@v6
+        with:
+          script: |
+              core.setFailed('Workflow failed. Release version does not match with selected target branch. Changelog not updated automatically.')
+
       - name: Extract release date from git tag
         id: release_date
         run: |
