--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -2,6 +2,19 @@ name: update changelog
 
 on:
   workflow_call:
+    inputs:
+      branch:
+        description: 'Target branch'
+        default: ${{ github.event.release.target_commitish }}
+        type: string
+      version:
+        description: 'Released version'
+        default: ${{ github.event.release.tag_name }}
+        type: string
+      notes:
+        description: 'Release notes'
+        default: ${{ github.event.release.body }}
+        type: string
 
 jobs:
   update:
@@ -16,10 +29,10 @@ jobs:
           fetch-depth: 0
           # Checkout target branch of this release. Ensures that the CHANGELOG
           # is not out of date.
-          ref: ${{ github.event.release.target_commitish }}
+          ref: ${{ inputs.branch }}
 
       - name: Check if branch and release match
-        if: ${{ github.event.release.target_commitish != 'main' && github.event.release.target_commitish != 'master' }}
+        if: ${{ inputs.branch != 'main' && inputs.branch != 'master' }}
         id: guard
         run: |
           NUMERIC_VERSION="${RELEASE_TAG_NAME#v}"
@@ -38,8 +51,8 @@ jobs:
           fi
           echo "VERSION_MISMATCH=$(echo $VERSION_MISMATCH)" >> $GITHUB_OUTPUT;
         env:
-          BRANCH: ${{ github.event.release.target_commitish }}
-          RELEASE_TAG_NAME: ${{ github.event.release.tag_name }}
+          BRANCH: ${{ inputs.branch }}
+          RELEASE_TAG_NAME: ${{ inputs.version }}
 
       - name: Fail if branch and release tag do not match
         if: ${{ steps.guard.outputs.VERSION_MISMATCH == 'true' }}
@@ -52,7 +65,7 @@ jobs:
         id: release_date
         run: |
           # Get UNIX timestamp from git-tag
-          TIMESTAMP_OF_RELEASE_COMMIT=$(git log -1 --date=unix --format=%ad '${{ github.event.release.tag_name }}');
+          TIMESTAMP_OF_RELEASE_COMMIT=$(git log -1 --date=unix --format=%ad '${{ inputs.version }}');
 
           # Convert timestamp to UTC date in Y-m-d format
           FORMATED_DATE=$(date -u -d @$TIMESTAMP_OF_RELEASE_COMMIT +%Y-%m-%d)
@@ -65,15 +78,15 @@ jobs:
         with:
           # Pass extracted release date, release notes and version to the Action.
           release-date: ${{ steps.release_date.outputs.date }}
-          release-notes: ${{ github.event.release.body }}
-          latest-version: ${{ github.event.release.tag_name }}
-          compare-url-target-revision: ${{ github.event.release.target_commitish }}
+          release-notes: ${{ inputs.notes }}
+          latest-version: ${{ inputs.version }}
+          compare-url-target-revision: ${{ inputs.branch }}
           parse-github-usernames: true
 
       - name: Commit updated CHANGELOG
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           # Push updated CHANGELOG to release target branch.
-          branch: ${{ github.event.release.target_commitish }}
+          branch: ${{ inputs.branch }}
           commit_message: Update CHANGELOG
           file_pattern: CHANGELOG.md
