Use latest LTS version of node.

--- a/.github/workflows/compile-assets.yml
+++ b/.github/workflows/compile-assets.yml
@@ -4,7 +4,7 @@ on:
   workflow_call:
     inputs:
       node:
-        default: "16"
+        default: "lts/*"
         type: string
       cmd:
         default: "production"
