--- a/.github/workflows/normalize-composer.yml
+++ b/.github/workflows/normalize-composer.yml
@@ -7,7 +7,7 @@ on:
         default: "8.4"
         type: string
       message:
-        default: Normalize every composer.json files
+        default: Normalize every composer.json file
         type: string
       fix:
         default: true
