--- a/.github/workflows/normalize-composer.yml
+++ b/.github/workflows/normalize-composer.yml
@@ -29,7 +29,7 @@ jobs:
           extensions: json, dom, curl, libxml, mbstring
           coverage: none
 
-      - name: Normalize every composer.json files
+      - name: Normalize every composer.json file
         run: find . -path "*/vendor" -prune -o -name "composer.json" -print -exec composer normalize {} \;
 
       - name: Commit linted files
